# songs-server

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pylintrc  pyproject.toml
.github/workflows/: pipeline.yml  pipeline_dev.yml
alembic/versions/: 2a30d9df4793_add_name_and_image_to_streamings.py  570cfe8ee431_add_sub_level_column_to_users_table_and_.py  5c1bf26c4313_create_favorites_tables.py  80ca5cf7ccc3_fix_favorite_playlists_table.py  8103fd5c7893_create_new_comments_table.py  ac32c8def835_add_album_sub_level_temporarily.py  df0aed374824_create_comments_table.py  df65b80d3a52_make_creator_id_column_nullable.py  e265a1960086_change_comments_table_to_reviews_table.py  f92d1310b2b6_add_streaming_column_to_usermodel.py
docker/: Dockerfile  Dockerfile.local  coverage-compose.yml  docker-compose.yml  heroku-Dockerfile  pytest.Dockerfile  testdb-compose.yml
docker/sql/: create_tables.sql
scripts/: coverage-container.sh  cp-root.sh  docker-entrypoint.sh  docker-pytest.sh  local-container.sh  test-container.sh
src/: classes.py  constants.py  exceptions.py  main.py  roles.py
src/app/: albums.py  comments.py  favorites.py  playlists.py  reviews.py  songs.py  streamings.py  subscriptions.py  (+1 more)
tests/: conftest.py  test_albums.py  test_albums_searchs.py  test_blocks.py  test_comments.py  test_favorites.py  test_main.py  test_paginations.py  test_playlist.py  test_playlists.py  test_reviews.py  test_searchs.py  test_songs.py  test_songs_searchs.py  test_streamings.py  test_subscriptions.py  test_users.py  utils.py
(+139 files in other folders)
