[tool.poetry]
name = "python-fastapi-server"
version = "0.1.0"
description = ""
authors = ["Facundo Mastricchio <facundomastricchio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
flake8 = "^4.0.1"
pylint = "^2.13.5"
pytest-cov = "^3.0.0"
black = "^22.3.0"
requests = "^2.27.1"
firebase-admin = "^5.2.0"
SQLAlchemy = "^1.4.35"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"
python-multipart = "^0.0.5"
agora-token-builder = "^1.0.0"
requests-mock = "^1.9.3"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
